<resources>
    <string name="app_name">Mappy</string>

    <!-- Map List Strings -->
    <string name="empty_map_list">There is no maps!</string>
    <string name="logout">Logout</string>

    <!-- New Map Strings   -->
    <string name="new_map_action_bar_title">New Map</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="new_map_title_hint">Map Title</string>
    <string name="new_map_description_hint">Map Description</string>
    <string name="empty_title_error_new_map">Empty Title!</string>
    <string name="add_user_new_map_btn">ADD USER</string>

    <!-- Add User Dialog Strings   -->
    <string name="add_user_dialog_title">Enter user e-mail:</string>
    <string name="add_user_e_mail_hint">E-mail</string>
    <string name="add_user_invalid_email">There is no such user</string>
    <string name="add_user_already_added">This user is already added</string>

    <!-- Map Activity Strings   -->
    <string name="map_details_string">Details</string>
    <string name="map_string">Map</string>
    <string name="chat_string">Chat</string>

    <!-- Map Screen Fragment   -->
    <string name="edit_string">Edit</string>

    <!-- New Point Activity   -->
    <string name="new_point_toolbar_title">New Point</string>
    <string name="new_point_title_hint_string">Point title</string>
    <string name="new_point_description_hint_string">Point description</string>
    <string name="add_photo_string">Add photo</string>
    <string name="add_point_string">Add</string>
    <string name="cancel_new_point_string">Cancel</string>
    <string name="new_point_title_error_string">Invalid title</string>
    <string name="new_point_description_error_string">Invalid description</string>
    
    <!-- Edit Point Activity   -->
    <string name="edit_point_title_hint_string">Point title</string>
    <string name="edit_point_description_hint_string">Point description</string>
    <string name="edit_point_title_error_string">Invalid title</string>
    <string name="edit_point_description_error_string">Invalid description</string>
    <string name="edit_point_save_string">Save</string>
    <string name="edit_point_add_photo_string">Add photo</string>
    <string name="edit_point_cancel_string">Cancel</string>
    <string name="edit_point_delete_string">Delete</string>
    <string name="edit_point_toolbar_title">Edit point</string>

    <!-- Map Details Screen   -->
    <string name="map_details_add_user_string">Add user</string>
    <string name="map_details_leave_map">Leave</string>

    <!-- Map Chat   -->
    <string name="message_field_hint_string">Message</string>

</resources>
